Changes since 1.3e:
 o Make the entire evdns.h header enclosed in "extern C" as appropriate.
 o Remove redundant socklen_t definition from evdns.c; fix mingw build.
 o Fix evport implementation: port_disassociate called on unassociated events resulting in bogus errors; more efficient memory management; from Trond Norbye and Prakash Sangappa
 o Build correctly outside of the source tree. (Patch from Kelly Anderson)

Changes since 1.3d:
 o demote most http warnings to debug messages
 o Fix compilation on Solaris; from Magne Mahre
 o Add a "Date" header to HTTP responses when it's missing, as
   required by HTTP 1.1.  Original Patch from Ralph Moritz.
 o Fix a memory leak in which failed HTTP connections whould not free the request object
 o Fix a memory leak in the DNS server
 o Handle NULL timeouts correctly on Solaris; from Trond Norbye
 o Recalculate pending events properly when reallocating event array on Solaris; from Trond Norbye