@@ -3,6 +3,7 @@ Changes since 1.3e:
  o Remove redundant socklen_t definition from evdns.c; fix mingw build.
  o Fix evport implementation: port_disassociate called on unassociated events resulting in bogus errors; more efficient memory management; from Trond Norbye and Prakash Sangappa
  o Build correctly outside of the source tree. (Patch from Kelly Anderson)
+ o Fix evhttp.h compilation when TAILQ_ENTRY is not defined.
 
 Changes since 1.3d:
  o demote most http warnings to debug messages
